<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stoller Online</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="send">Ingresar</string>
    <string name="title_activity_lobby">Lobby</string>
    <string name="your_clients">Sus Clientes:</string>
    <string name="logo">Logo</string>
    <string name="month">Mes</string>
    <string name="year">Año</string>
    <string name="add">Agregar Producto</string>
    <string name="pick_quantity">Cantidad:</string>
    <string name="address">Dirección Facturación:</string>
    <string name="date">Fecha:</string>
    <string name="currency">Divisa:</string>
    <string name="order">Orden de compra:</string>
    <string name="pricing_list">Lista de precios:</string>
    <string name="unit_price">Precio unitario:</string>
    <string name="state">Estado:</string>
    <string name="subtotal">Subtotal:</string>

    <string-array name="clientes_context_menu">
        <item>Ingresar Orden de Pedido</item>
        <item>Ver Órdenes de Pedido</item>
        <item>Registrar Stock</item>
        <item>Ver más información</item>
    </string-array>
    <string-array name="months">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="divisas">
        <item>USD</item>
    </string-array>

    <string name="title_activity_registrar_stock">RegistrarStock</string>
    <string name="title_activity_seleccionar_producto">SeleccionarProducto</string>
    <string name="title_activity_ingresar_pedido">IngresarPedido</string>
    <string name="title_activity_ver_pedidos">VerPedidos</string>
    <string name="title_activity_show_pedido">ShowPedido</string>
    <string name="title_activity_info_cliente">InfoCliente</string>
    <string name="title_activity_settings1">SettingsActivity</string>

</resources>
