<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.com.stoller.stollermobile.Login"
    tools:ignore="MergeRootFrame" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="1862dp"
                android:layout_height="93dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_l" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:src="@drawable/banner_android" />



            <RelativeLayout
                android:id="@+id/loadingPanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/blue"
                android:id="@+id/usertv"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:id="@+id/useret"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/passwdtv"
                android:textColor="@color/blue"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:id="@+id/passwdet"
                android:layout_gravity="center_horizontal"
                android:inputType="textPassword"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:id="@+id/sendbtn"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
