<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.com.stoller.stollermobile.Login"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="fill_parent"
                android:layout_gravity="left"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/year"
                    android:id="@+id/textView"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/yearspin" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/month"
                    android:id="@+id/textView2"
                    android:layout_gravity="center"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/monthspin" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/addbtn"
            android:singleLine="false" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView" />

    </LinearLayout>
</FrameLayout>
